# huggingface-bedrock-importer

./: .gitignore  README.md  pyproject.toml
huggingface_bedrock_importer/: __main__.py  cli.py  importer.py
